--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,3 +5,18 @@ body {
 .blockquote {
   display: flex;
 }
+
+p {
+  cursor: pointer;
+  margin: 0;
+}
+
+.list-group-item {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.complete {
+  text-decoration: line-through;
+}
